// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInputField  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <form
      class="sc-hKgILt eqLMWy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bEnuwL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eMyfFh"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
            >
              <label
                class="StyledText-sc-1sadyjn-0 drTEXR"
                for="age"
              >
                Age
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="sc-gsTCUz kLVDRr"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ hvvxbw"
                      id="age"
                      inputmode="numeric"
                      name="age"
                      pattern="[0-9]*"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
                  >
                    <button
                      class="StyledButton-sc-323bzc-0 hiyJPE"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                    <button
                      class="StyledButton-sc-323bzc-0 hiyJPE"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="Subtract"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 jsieLm"
            >
              <button
                class="StyledButton-sc-323bzc-0 iZFCLM"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`NumberInputField  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <form
      class="sc-hKgILt eqLMWy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bEnuwL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eMyfFh"
        >
          <div>
            <div
              class="sc-gsTCUz kLVDRr"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ hvvxbw"
                  id="age"
                  inputmode="numeric"
                  label="Age"
                  name="age"
                  pattern="[0-9]*"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
              >
                <button
                  class="StyledButton-sc-323bzc-0 hiyJPE"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-label="Add"
                    class="StyledIcon-ofa7kd-0 dEeaTZ"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,22 L12,2 M2,12 L22,12"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
                <button
                  class="StyledButton-sc-323bzc-0 hiyJPE"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-label="Subtract"
                    class="StyledIcon-ofa7kd-0 dEeaTZ"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M2,12 L22,12"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 jsieLm"
            >
              <button
                class="StyledButton-sc-323bzc-0 iZFCLM"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`NumberInputField  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <form
      class="sc-hKgILt eqLMWy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bEnuwL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eMyfFh"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
            >
              <label
                class="StyledText-sc-1sadyjn-0 drTEXR"
                for="age"
              >
                Age
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="sc-gsTCUz kLVDRr"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ hvvxbw"
                      id="age"
                      inputmode="numeric"
                      name="age"
                      pattern="[0-9]*"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
                  >
                    <button
                      class="StyledButton-sc-323bzc-0 hiyJPE"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                    <button
                      class="StyledButton-sc-323bzc-0 hiyJPE"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="Subtract"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 jsieLm"
            >
              <button
                class="StyledButton-sc-323bzc-0 iZFCLM"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
